Fix main menu z-index and put grid in a SASS mixin.

--- a/src/styles/partials/_layout.scss
+++ b/src/styles/partials/_layout.scss
@@ -29,7 +29,7 @@ $menu-width: 15em;
   height: 100%;
   left: -$menu-width;
   box-sizing: border-box;
-  z-index: 1003;
+  z-index: 1021;
   overflow-y: auto;
 
   &.is-shown {
