--- a/src/styles/partials/_module.scss
+++ b/src/styles/partials/_module.scss
@@ -2,7 +2,17 @@
 @import 'media-queries';
 @import 'pure';
 
-@mixin grid-column() {
+@mixin grid {
+  letter-spacing: -0.31em; /* Webkit: collapse white-space between units */
+  *letter-spacing: normal; /* reset IE < 8 */
+  *word-spacing: -0.43em; /* IE < 8: collapse white-space between units */
+  text-rendering: optimizespeed; /* Webkit: fixes text-rendering: optimizeLegibility */
+  display: flex;
+  flex-flow: row wrap;
+  align-content: flext-start;
+}
+
+@mixin grid-column {
   box-sizing: border-box;
   display: inline-block;
   *display: inline; /* IE < 8: fake inline-block */
@@ -93,19 +103,12 @@
 }
 
 .form-layout {
-  @include grid-column();
-  letter-spacing: -0.31em; /* Webkit: collapse white-space between units */
-  *letter-spacing: normal; /* reset IE < 8 */
-  *word-spacing: -0.43em; /* IE < 8: collapse white-space between units */
-  text-rendering: optimizespeed; /* Webkit: fixes text-rendering: optimizeLegibility */
-
-  display: flex;
-  flex-flow: row wrap;
-  align-content: flex-start;
+  @include grid-column;
+  @include grid;
 }
 
 .form-panel {
-  @include grid-column();
+  @include grid-column;
 
   @include min-md-screen {
     width: 50%;
@@ -132,14 +135,7 @@
     text-decoration: none;
   }
 
-  letter-spacing: -0.31em; /* Webkit: collapse white-space between units */
-  *letter-spacing: normal; /* reset IE < 8 */
-  *word-spacing: -0.43em; /* IE < 8: collapse white-space between units */
-  text-rendering: optimizespeed; /* Webkit: fixes text-rendering: optimizeLegibility */
-
-  display: flex;
-  flex-flow: row wrap;
-  align-content: flex-start;
+  @include grid;
 }
 
 .toolbar-section {
@@ -219,14 +215,7 @@
 }
 
 .members-list-item {
-  letter-spacing: -0.31em; /* Webkit: collapse white-space between units */
-  *letter-spacing: normal; /* reset IE < 8 */
-  *word-spacing: -0.43em; /* IE < 8: collapse white-space between units */
-  text-rendering: optimizespeed; /* Webkit: fixes text-rendering: optimizeLegibility */
-
-  display: flex;
-  flex-flow: row wrap;
-  align-content: flex-start;
+  @include grid;
   margin-bottom: 4em;
 }
 
